--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Quiz App</title>
-      <link rel="stylesheet" href="css.css">
+      <link rel="stylesheet" href="sytle.css">
   </head>
   <body>
       <div class="quiz-box" id="quizBox">
